@@ -1649,7 +1649,8 @@ vips_foreign_operation_init( void )
 	extern GType vips_foreign_load_magick_buffer_get_type( void ); 
 	extern GType vips_foreign_load_magick7_file_get_type( void ); 
 	extern GType vips_foreign_load_magick7_buffer_get_type( void ); 
-	extern GType vips_foreign_save_dz_get_type( void ); 
+	extern GType vips_foreign_save_dz_file_get_type( void ); 
+	extern GType vips_foreign_save_dz_buffer_get_type( void ); 
 	extern GType vips_foreign_load_webp_file_get_type( void ); 
 	extern GType vips_foreign_load_webp_buffer_get_type( void ); 
 	extern GType vips_foreign_save_webp_file_get_type( void ); 
@@ -1709,7 +1710,8 @@ vips_foreign_operation_init( void )
 #endif /*HAVE_GIFLIB*/
 
 #ifdef HAVE_GSF
-	vips_foreign_save_dz_get_type(); 
+	vips_foreign_save_dz_file_get_type(); 
+	vips_foreign_save_dz_buffer_get_type(); 
 #endif /*HAVE_GSF*/
 
 #ifdef HAVE_PNG
